# cppasta

./: CMakeLists.txt  LICENSE  README.md
include/cppasta/: bitmask.hpp  containers.hpp  dense_slot_map.hpp  fd.hpp  fmt.hpp  fmt_fspath.hpp  fmt_optional.hpp  generational_index.hpp  glm.hpp  id.hpp  io.hpp  iterators.hpp  math.hpp  primitive_typedefs.hpp  random.hpp  singleton.hpp  skipfield.hpp  slot_map.hpp  slot_map_storage.hpp  slotmap.hpp  sparsevector.hpp  strings.hpp  synchronized.hpp  templates.hpp  unicode.hpp  utf8.hpp  vector_map.hpp  views.hpp
src/: fd.cpp  io.cpp  math.cpp  random.cpp  strings.cpp  unicode.cpp  utf8.cpp
tests/: generational_index.cpp  skipfield.cpp  slotmap.cpp  sparsevector.cpp  unicode.cpp
